zg 01.09.2016 17:39:45 +0200 - build 4774

1. 0003288: ShowTotalSize for Plugin.

drkns 01.09.2016 01:21:07 +0200 - build 4773

1. Продолжение 4772.

drkns 31.08.2016 03:08:55 +0200 - build 4772

1. Очередное переосмысление концепции обработки исключений.

zg 29.08.2016 19:46:17 +0200 - build 4771

1. FSF.FarNameToInputRecord неправильно заполнял KeyEvent.uChar.UnicodeChar для клавиш типа "AltShift8".

drkns 25.08.2016 14:55:58 +0200 - build 4770

1. Добавим нормальную валидацию конфигурационных параметров, дабы не размызвать проверки ровным слоем по всему коду.

2. Второй параметр Editor.Set теперь опционален (по умолчанию -1).

shmuel 25.08.2016 14:24:34 +0200 - build 4769

1. Ещё одно уточнение 4767.

shmuel 25.08.2016 13:53:19 +0200 - build 4768

1. Уточнение 4767.

shmuel 25.08.2016 13:27:23 +0200 - build 4767

1. MacroAPI: вызов Editor.Set(0) выставлял длину таба равной нулю, что в дальнейшем приводило к падению.

drkns 25.08.2016 00:57:25 +0200

1. Продолжение валидации шапок.

drkns 24.08.2016 18:08:24 +0200 - build 4766

1. Уточнения обработки исключений.

2. После 4709 не работало изменение размера консоли с помощью "mode x, y".

drkns 23.08.2016 11:20:47 +0200 - build 4765

1. Не работал поиск в UTF8-файлах во вьювере.

2. Там же - криво работал поиск по регулярным выражениям.

drkns 22.08.2016 22:01:40 +0200

1. GCC 6.

drkns 22.08.2016 11:43:23 +0200

1. Приведены в порядок шапки во всех cpp/hpp.

2. Добавлен скрипт для валидации п. 1.

drkns 20.08.2016 14:01:57 +0200 - build 4764

1. Уточнение 4757.1.

drkns 19.08.2016 09:45:27 +0200 - build 4763

1. Уточнение 4762.

drkns 18.08.2016 22:11:54 +0200 - build 4762

1. Продолжение 0003274.

drkns 18.08.2016 21:15:20 +0200 - build 4761

1. Уточнение 4760.1.

drkns 18.08.2016 02:34:26 +0200 - build 4760

1. 0003274: В полях ввода комбинация клавиш переключения языка Ctrl-Shift ошибочно фиксирует начало изменения поля
   Обработка FEDITLINE_CLEARFLAG частично вынесена в EditControl.
