@@ -1,3 +1,9 @@
+drkns 03.09.2016 18:19:14 +0200 - build 4775
+
+1. Падение при определённых манипуляциях с панелями плагинов.
+
+2. Утечка там же.
+
 zg 01.09.2016 17:39:45 +0200 - build 4774
 
 1. 0003288: ShowTotalSize for Plugin.
